[gd_scene load_steps=12 format=2]

[ext_resource path="res://Systems/Classes/UI/_shared_resources/Fonts/small_df.tres" type="DynamicFont" id=1]
[ext_resource path="res://_shared_assets/Fonts/Jost/static/Jost-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Systems/Classes/UI/_building_blocks/Button/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Systems/Classes/UI/_building_blocks/Button/_resources/white.tres" type="StyleBox" id=4]
[ext_resource path="res://_shared_assets/Sfx/Kenney/drop_003.ogg" type="AudioStream" id=6]
[ext_resource path="res://Systems/Classes/UI/_building_blocks/Dialogue/_resources/panel.tres" type="StyleBox" id=7]
[ext_resource path="res://Systems/Classes/UI/_building_blocks/Dialogue/Dialogue.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.584314 )
border_color = Color( 0.956863, 0.823529, 0.611765, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0, 0, 0, 0.054902 )
shadow_size = 16

[sub_resource type="DynamicFont" id=2]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_bottom_right = 60
corner_detail = 1

[sub_resource type="DynamicFont" id=4]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Dialogue" type="VBoxContainer"]
margin_right = 590.0
margin_bottom = 232.0
rect_min_size = Vector2( 570, 0 )
rect_pivot_offset = Vector2( 259, 220 )
custom_constants/separation = -10
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 590.0
margin_bottom = 182.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 590.0
margin_bottom = 182.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 585.0
margin_bottom = 177.0

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
margin_right = 320.0
margin_bottom = 320.0
rect_min_size = Vector2( 160, 160 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/panel = ExtResource( 7 )

[node name="Thumbnail" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2"]
margin_right = 320.0
margin_bottom = 320.0
rect_min_size = Vector2( 320, 320 )
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 580.0
margin_bottom = 172.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 580.0
margin_bottom = 47.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_right = 570.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 580.0
margin_bottom = 172.0
size_flags_vertical = 3
custom_constants/separation = 6

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 580.0
margin_bottom = 121.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer"]
margin_right = 580.0
margin_bottom = 121.0
custom_constants/margin_right = 10
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5

[node name="Text" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 570.0
margin_bottom = 116.0
rect_min_size = Vector2( 560, 111 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 172.0
margin_right = 590.0
margin_bottom = 232.0
alignment = 2

[node name="Tail" type="Panel" parent="HBoxContainer"]
margin_left = 128.0
margin_right = 188.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 3 )

[node name="Separator" type="MarginContainer" parent="HBoxContainer"]
margin_left = 192.0
margin_right = 442.0
margin_bottom = 60.0
rect_min_size = Vector2( 250, 0 )

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 446.0
margin_right = 590.0
margin_bottom = 60.0
rect_min_size = Vector2( 80, 35 )

[node name="ButtonNext" parent="HBoxContainer/CenterContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 6.0
margin_right = 144.0
margin_bottom = 53.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 8
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 4 )
text = " press [E] "

[node name="ButtonOk" parent="HBoxContainer/CenterContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 5.0
margin_top = 6.0
margin_right = 139.0
margin_bottom = 53.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 8
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 4 )
text = " press [E]"

[node name="Sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -30.0
bus = "Sfx"
[connection signal="pressed" from="HBoxContainer/CenterContainer/ButtonNext" to="." method="_on_ButtonOk_pressed"]
[connection signal="pressed" from="HBoxContainer/CenterContainer/ButtonOk" to="." method="_on_ButtonOk_pressed"]
